// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Matches snapshot with multiple accounts links 1`] = `
<nav
  aria-label="My account"
  className="nav myAccount"
>
  <h2
    className="myAccountHeading"
  >
    My account
  </h2>
  <ul
    className="menu"
  >
    <li
      key="https://accounts.nice.org.uk/profile"
    >
      <a
        href="https://accounts.nice.org.uk/profile"
        onClick={[Function]}
      >
        Joe Bloggs
      </a>
    </li>
    <li
      key="https://accounts.nice.org.uk/signout"
    >
      <a
        href="https://accounts.nice.org.uk/signout"
        onClick={[Function]}
      >
        Sign out
      </a>
    </li>
  </ul>
</nav>
`;

exports[`Nav Matches snapshot with no accounts links 1`] = `
<div
  className="wrapper"
  id="header-menu"
>
  <nav
    className="nav"
  >
    <ul
      aria-labelledby="header-menu-button"
      className="menu"
      role="menu"
    >
      <li
        key="link1"
        role="presentation"
      >
        <a
          aria-current={null}
          href="https://url1/"
          onClick={[Function]}
          role="menuitem"
        >
          <span>
            First link
          </span>
        </a>
      </li>
      <li
        key="link2"
        role="presentation"
      >
        <a
          aria-current={null}
          href="https://url2/"
          onClick={[Function]}
          role="menuitem"
        >
          <span>
            <abbr
              title="Abbreviation title"
            >
              Second link
            </abbr>
          </span>
        </a>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Nav Matches snapshot with single accounts link 1`] = `
<nav
  aria-label="My account"
  className="nav myAccount"
>
  <ul
    className="menu"
  >
    <li
      key="https://accounts.nice.org.uk/"
    >
      <a
        href="https://accounts.nice.org.uk/"
        onClick={[Function]}
      >
        Sign in
      </a>
    </li>
  </ul>
</nav>
`;
